fixed horizontal scrolling with mobile menu open

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -52,6 +52,7 @@
   opacity: 0;
   visibility: hidden;
   overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   text-align: left;
   transition: opacity 0.35s, visibility 0.35s, transform 0.25s;
